--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,3 +4,4 @@
     <li><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
   <% end %>
 </ul>
+<%= link_to "Add New cocktail",  new_cocktail_path, class: "btn btn-primary"  %>
