--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,4 @@
 <h2><%= @cocktail.name %></h2>
+<%= link_to "Back", root_path  %><br>
 
-
+<%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail) %>
