--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Cocktails</h1>
 <ul>
   <% @cocktails.each do |cocktail| %>
-    <li><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
+    <li><%= link_to cocktail.name, cocktail_path(cocktail) %>
+        <%= link_to "🗑", root_path(@cocktail), method: :delete,
+           data: { confirm: "Are you sure?" } %></li>
   <% end %>
 </ul>
+
+
 <%= link_to "Add New cocktail",  new_cocktail_path, class: "btn btn-primary"  %>
