--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,7 @@
 <h2><%= @cocktail.name %></h2>
-<%= link_to "Back", root_path  %><br>
+<%= link_to "◀️ Back", root_path  %><br>
 
-<%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail) %>
-
+<%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
 <!-- #retrive all doses of the cocktail
 for each dose display the description of the dose
 display the name of the related ingredient -->
