--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,7 +1,10 @@
 <h2>Add a new dose for <%= @cocktail.name %></h2>
-<%= simple_form_for ([@cocktail, @dose]) do |f| %>
-  <%= f.association :ingredient %>
-  <%= f.input :description %>
-  <%= f.submit class: "btn btn-primary" %>
-<% end %>
-<%= link_to "Back", root_path  %>
+<div>
+  <%= simple_form_for ([@cocktail, @dose]) do |f| %>
+    <%= f.association :ingredient %>
+    <%= f.input :ingredient, placeholder: "Ingredient of your choice" %>
+    <%= f.input :description %>
+    <%= f.submit class: "btn btn-primary" %>
+  <% end %>
+</div>
+<%= link_to "◀️ Back", root_path  %>
