--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,34 @@
 // Specific CSS for your home-page
+  .card {
+  background-size: cover;
+  background-position: center;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-bottom: 30px;
+}
+
+a {
+  color: white;
+}
+
+a:hover {
+  color: black;
+}
+
+.btn {
+  padding: $spacer ($spacer * 3);
+  color: white;
+  background: black;
+}
+.footer {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
