--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,6 +1,9 @@
-
 <%= simple_form_for(cocktail) do |f| %>
-  <%= f.input :name %>
-  <%= f.submit %>
-<% end %>
+ <div class="form-inputs">
+    <%= f.input :name %>
+ </div>
 
+  <div class="form-actions">
+    <%= f.submit %>
+  </div>
+<% end %>
