--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,43 @@
 <h1>Cocktails</h1>
-<ul>
-  <% @cocktails.each do |cocktail| %>
-    <li><%= link_to cocktail.name, cocktail_path(cocktail) %>
-        <%= link_to "🗑", root_path(@cocktail), method: :delete,
+<center>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1554473059-68a6e2ae8009?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60);">
+  <div class="container" style="color:white;">
+    <h1>Get creative and become a mixologist for a night</h1><br>
+    <h2>Make your own cocktails!</h2>
+    <p>Add ingredients you like</p>
+  </div>
+  </center>
+</div>
+
+<div class="container">
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
+          <div class="card-description">
+          </div>
+            <%= link_to cocktail.name, cocktail_path(cocktail) %>
+            <%= link_to "🗑", root_path(@cocktail), method: :delete,
            data: { confirm: "Are you sure?" } %></li>
-  <% end %>
-</ul>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
+<div class="container">
+  <div>
+    <%= link_to "Add New cocktail",  new_cocktail_path, class: "btn btn-primary"  %><br>
+  </div>
+</div>
 
-<%= link_to "Add New cocktail",  new_cocktail_path, class: "btn btn-primary"  %>
+<div class="footer">
+  <p>Follow us on</p>
+    <div class="footer-links">
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+    </div>
+</div>
