--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,5 @@
 <h2>New Cocktail</h2>
 
-<%= render "form", cocktail: @cocktail %>
-<%= link_to "Back", root_path  %>
+<%= render "form", cocktail: @cocktail %><br>
+
+<%= link_to "◀️  Back", root_path  %>
