--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,10 +1,8 @@
 <h2>Add a new dose for <%= @cocktail.name %></h2>
-<div>
-  <%= simple_form_for ([@cocktail, @dose]) do |f| %>
-    <%= f.association :ingredient %>
-    <%= f.input :ingredient, placeholder: "Ingredient of your choice" %>
-    <%= f.input :description %>
-    <%= f.submit class: "btn btn-primary" %>
-  <% end %>
-</div>
+<%= simple_form_for ([@cocktail, @dose]) do |f| %>
+  <%= f.association :ingredient %>
+  <%= f.input :ingredient, placeholder: "Ingredient of your choice" %>
+  <%= f.input :description %>
+  <%= f.submit class: "btn btn-primary" %>
+<% end %><br>
 <%= link_to "◀️ Back", root_path  %>
