--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -11,8 +11,9 @@
 <br>
 <%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %><br>
 <br>
-<%= link_to "◀️ Back", root_path  %><br>
-
+<div class="link">
+  <%= link_to "◀️ Back", root_path  %><br>
+</div>
 <!-- #retrive all doses of the cocktail
 for each dose display the description of the dose
 display the name of the related ingredient -->
