--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,9 +14,10 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 30px;
 }
-
 a {
   color: white;
+  padding: 20px;
+
 }
 
 a:hover {
@@ -32,4 +33,9 @@ a:hover {
   font-size: 20px;
   margin-bottom: 20px;
   background: #dddddd;
+}
+
+.form-inputs {
+  margin-left: 10px;
+  margin-right: 10px;
 }
