--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,10 +1,13 @@
-<%= simple_form_for(cocktail) do |f| %>
- <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
- </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1>Create a new cocktail</h1>
 
-  <div class="form-actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+      <%= simple_form_for(cocktail) do |f| %>
+       <div class="form-inputs">
+          <%= f.input :name %>
+          <%= f.input :photo, as: :file %>
+          <%= f.submit "Submit", class: "btn btn-primary" %><br>
+        <% end %>
+        <br><%= link_to "Back", root_path, class: "btn btn-primary" %>
+      </div>
