--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,3 @@
-<h2>New Cocktail</h2>
-
-<%= render "form", cocktail: @cocktail %><br>
-
-<%= link_to "◀️  Back", root_path  %>
+<div class="container">
+  <%= render "form", cocktail: @cocktail %><br>
+</div>
