--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,8 +1,11 @@
-<h2>Add a new dose for <%= @cocktail.name %></h2>
-<%= simple_form_for ([@cocktail, @dose]) do |f| %>
-  <%= f.association :ingredient %>
-  <%= f.input :ingredient, placeholder: "Ingredient of your choice" %>
-  <%= f.input :description %>
-  <%= f.submit class: "btn btn-primary" %>
-<% end %><br>
-<%= link_to "◀️ Back", root_path  %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h2>Add a new dose for <%= @cocktail.name %></h2>
+      <%= simple_form_for ([@cocktail, @dose]) do |f| %>
+        <%= f.association :ingredient %>
+        <%= f.input :ingredient, placeholder: "Ingredient of your choice" %>
+        <%= f.input :description %>
+        <%= f.submit class: "btn btn-primary" %>
+      <% end %><br>
+      <%= link_to "Back", root_path, class: "btn btn-primary" %>
