--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,31 @@
 // Specific CSS for your home-page
-  .card {
+body{
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: 100 !important;
+  background: black;
+  color: white;
+}
+
+.banner{
+position: relative;
+}// Specific CSS for your home-page
+
+.banner-image{
+  height: 700px;
+  width: 100vw;
+}
+
+.banner-text {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  color: white;
+}
+
+.card-category {
   background-size: cover;
   background-position: center;
-  height: 180px;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,29 +35,69 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-size: 20px;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   margin-bottom: 30px;
 }
+
 a {
   color: white;
   padding: 20px;
 }
-  a:hover {
-    color: black;
+    a:hover {
+      color: black;
    }
 
-
 .btn {
+  border-radius: 9px;
   padding: $spacer ($spacer * 3);
   color: white;
-  background: black;
-}
+  background: black;}
+
 .footer {
   font-size: 20px;
   margin-bottom: 20px;
-  background: #dddddd;
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
 }
 
 .form-inputs {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.footer-links {
+  display: flex;
+  align-items: center;
+}
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
 }
