--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -19,7 +19,7 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-6 col-lg-3">
        <% if cocktail.photo.attached? %>
-          <% background_url = cl_image_path cocktail.photo, width: 200, height: 300, crop: :fill %>
+          <% cl_image_path cocktail.photo.key, width: 200, height: 300, crop: :fill %>
         <% else %>
           <% background_url = 'https://source.unsplash.com/500x400/?cocktail' %>
         <% end %>
@@ -27,7 +27,7 @@
           <div class="card-description">
             <h3><%= link_to cocktail.name, cocktail_path(cocktail) %></h3><br>
             <%= link_to "Edit📝", cocktail_path(cocktail) %>
-            <%= link_to "Delete🗑", cocktails_path  %>
+            <%= link_to "Delete🗑", cocktails_path %>
          </div>
         </div>
       </div>
@@ -35,11 +35,10 @@
   </div>
 </div>
 
-
-<div class="footer">
-  <p>Follow us on</p>
-    <div class="footer-links">
-      <a href="#"><i class="fab fa-instagram"></i> Instagram icon that is not displaying</a>
-      <a href="#"><i class="fab fa-facebook"></i> Facebook icon that is not displaying</a>
-    </div>
-</div>
+  <div class="footer">
+    <p>Follow us on</p>
+      <div class="footer-links">
+        <a href="#"><i class="fab fa-instagram"></i> Instagram not displaying</a>
+        <a href="#"><i class="fab fa-facebook"></i> Facebook not displaying</a>
+      </div>
+  </div>
