--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,23 +1,21 @@
-<div class="container">
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  <h1><%= @cocktail.name %></h1>
-</div>
-  <% if @cocktail.photo.attached? %>
-    <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
-   <% end %>
+<% if @cocktail.photo.attached? %>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+<% end %>
+ <h1><%= @cocktail.name %></h1>
+ <div class="banner-text" style="float: left; width: 50%">
+    <%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %><br>
+ </div>
 </div>
 
 <% @cocktail.doses.each do |dose| %>
   <%= dose.description %>
   <%= dose.ingredient.name %>
-<% end %><br>
-<br>
-<div class="container">
-<%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %><br>
-<br>
-<div class="link">
-  <%= link_to "Back", root_path, class: "btn btn-primary" %><br>
+<% end %>
+
+<div class="footer">
+  <br><%= link_to "Back", root_path, class: "btn btn-primary" %>
 </div>
+
 <!-- #retrive all doses of the cocktail
 for each dose display the description of the dose
 display the name of the related ingredient -->
