--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,6 +26,7 @@ position: relative;
   background-size: cover;
   background-position: center;
   height: 400px;
+  width: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
