--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -11,3 +11,6 @@
         <% end %>
         <br><%= link_to "Back", root_path, class: "btn btn-primary" %>
       </div>
+    </div>
+  </div>
+</div>
