--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -19,7 +19,7 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-6 col-lg-3">
        <% if cocktail.photo.attached? %>
-          <% cl_image_path cocktail.photo.key, width: 200, height: 300, crop: :fill %>
+          <% background_url = cl_image_path cocktail.photo.key, width: 200, height: 200, crop: :fill %>
         <% else %>
           <% background_url = 'https://source.unsplash.com/500x400/?cocktail' %>
         <% end %>
@@ -27,7 +27,7 @@
           <div class="card-description">
             <h3><%= link_to cocktail.name, cocktail_path(cocktail) %></h3><br>
             <%= link_to "Edit📝", cocktail_path(cocktail) %>
-            <%= link_to "Delete🗑", cocktails_path %>
+            <%= link_to "Delete🗑", cocktail, method: :delete, data: {confirm: "Are you sure?"} %>
          </div>
         </div>
       </div>
