--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -38,7 +38,7 @@
   <div class="footer">
     <p>Follow us on</p>
       <div class="footer-links">
-        <a href="#"><i class="fab fa-instagram"></i> Instagram not displaying</a>
-        <a href="#"><i class="fab fa-facebook"></i> Facebook not displaying</a>
+        <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="#"><i class="fab fa-facebook"></i> Facebook</a>
       </div>
   </div>
