--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,10 +1,13 @@
-<div class="container">
+<%= image_tag "img.png", class: "navbar-brand" %>
+<div class="form-container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h1>Create a new cocktail</h1>
-
+      <div class="banner-form">
+        <%= image_tag "bar.jpeg", class: "banner-form-img" %>
+      </div>
+      <br><center><h1>Create a new cocktail</h1></center>
       <%= simple_form_for(cocktail) do |f| %>
-       <div class="form-inputs">
+        <div class="form-inputs">
           <%= f.input :name %>
           <%= f.input :photo, as: :file %>
           <%= f.submit "Submit", class: "btn btn-primary" %><br>
