--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,10 +1,18 @@
+<%= image_tag "img.png", class: "navbar-brand" %>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <h2>Add a new dose for <%= @cocktail.name %></h2>
+     <div class="banner-form">
+        <%= image_tag "bar.jpeg", class: "banner-form-img" %>
+      </div>
+      <br><center><h2>Add a new dose for <%= @cocktail.name %></h2></center>
       <%= simple_form_for ([@cocktail, @dose]) do |f| %>
         <%= f.association :ingredient %>
         <%= f.input :description %>
         <%= f.submit class: "btn btn-primary" %>
       <% end %><br>
       <%= link_to "Back", root_path, class: "btn btn-primary" %>
+     </div>
+    </div>
+  </div>
+</div>
