--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="banner-form">
-        <%= image_tag "bar.jpeg", class: "banner-form-img" %>
+        <%= image_tag "bar.jpg", class: "banner-form-img" %>
       </div>
       <br><center><h1>Create a new cocktail</h1></center>
       <%= simple_form_for(cocktail) do |f| %>
