--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
      <div class="banner-form">
-        <%= image_tag "bar.jpeg", class: "banner-form-img" %>
+        <%= image_tag "bar.jpg", class: "banner-form-img" %>
       </div>
       <br><center><h2>Add a new dose for <%= @cocktail.name %></h2></center>
       <%= simple_form_for ([@cocktail, @dose]) do |f| %>
