--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,10 +16,12 @@ position: relative;
 }
 
 .banner-text {
+  margin-top: 70px;
   position: absolute;
-  top: 50%;
   left: 5%;
   color: white;
+  top: -16px;
+
 }
 
 .card-category {
