--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,8 +5,8 @@
 
 // External libraries
 @import "bootstrap/scss/bootstrap";
-// @import "scss/fontawesome. scss";
-// @import "font-awesome";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 // picks it up in node_modules!
 
 // Your CSS partials
