--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,9 @@
-<%= image_tag "img.png",  class: "navbar-brand" %>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <!-- <div class="container d-flex"> -->
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "img.png" %>
+    <% end %>
+</div>
 <h1><center><%= @cocktail.name %><center></h1><br>
 <center><div class="container"><center>
   <% if @cocktail.photo.attached? %>
