--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(<%= image_path "logo.jpg" %>);">
   <div class="container text-light">
-    <h1>Get creative in <strong class="text-primary">Tiki Bar</strong> and become a mixologist for a night.</h1>
+    <h1>Get creative in <strong class="text-primary">Tiki Bar</strong> and<br> become a mixologist for a night.</h1><br>
     <h2>Make your own cocktails!</h2><br>
     <p>Add ingredients you like the most!</p><br>
     <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary"  %><br>
