--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,9 +7,11 @@ body{
 }
 
 .banner{
-  position: relative;
   background-size: cover;
-  padding: 100px 0;
+  height: 700px;
+  background-position: center;
+  padding: 150px 0;
+  position: relative;
   p {
     font-size: 24px;
   }
