--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -66,11 +66,13 @@ a {
       color: black;
    }
 
-.btn {
+.btn-primary {
   border-radius: 9px;
-  padding: $spacer ($spacer * 3);
+  width: 200px;
+  padding: 15px;
   color: white;
   background: black;}
+
 
 .footer {
   font-size: 20px;
