--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -17,7 +17,7 @@
   <%= dose.ingredient.name %>
 <% end %>
 </div>
-<div class="footer">
+<div class="footer-show">
   <%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
   <%= link_to "Back", root_path, class: "btn btn-primary" %>
 </div>
