--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -86,6 +86,17 @@ a {
   color: rgba(0,0,0,0.3);
 }
 
+.footer-show {
+  background: black;
+  font-size: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 100px;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
+}
 .form-inputs {
   margin-left: 10px;
   margin-right: 10px;
