--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div class="container">
-    <center><h2>Cocktail menu</h2></center>
+    <br><center><h2>Cocktail menu</h2></center>
   <div class="col-12 col-md-6 col-lg-3"></div>
 </div>
 
