--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,8 +7,12 @@ body{
 }
 
 .banner{
+  background: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  height: 700px;
+  // height: 700px;
   background-position: center;
   padding: 150px 0;
   position: relative;
@@ -101,14 +105,9 @@ a {
   display: flex;
   align-items: center;
   color: white;
+  text-decoration: none;
 }
-// .footer-links a {
-//   color: white;
-//   opacity: 0.15;
-//   text-decoration: none;
-//   font-size: 24px;
-//   padding: 0px 10px;
-// }
+
 .footer-links a:hover {
   opacity: 1;
   color: blue;
@@ -118,8 +117,3 @@ a {
   margin-bottom: 20px;
 }
 
-.form-inputs {
-  margin-left: 10px;
-  margin-right: 10px;
-  font-size: 20px;
-}
